bison_dfa_assignment/part2_grammar2.output
Grammar

    0 $accept: expr $end

    1 expr: expr '+' term
    2     | term

    3 term: term '*' primary
    4     | primary

    5 primary: ID
    6        | '(' expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 6
    ')' (41) 6
    '*' (42) 3
    '+' (43) 1
    error (256)
    ID (258) 5


Nonterminals, with rules where they appear

    $accept (8)
        on left: 0
    expr (9)
        on left: 1 2
        on right: 0 1 6
    term (10)
        on left: 3 4
        on right: 1 2 3
    primary (11)
        on left: 5 6
        on right: 3 4


State 0

    0 $accept: • expr $end

    ID   shift, and go to state 1
    '('  shift, and go to state 2

    expr     go to state 3
    term     go to state 4
    primary  go to state 5


State 1

    5 primary: ID •

    $default  reduce using rule 5 (primary)


State 2

    6 primary: '(' • expr ')'

    ID   shift, and go to state 1
    '('  shift, and go to state 2

    expr     go to state 6
    term     go to state 4
    primary  go to state 5


State 3

    0 $accept: expr • $end
    1 expr: expr • '+' term

    $end  shift, and go to state 7
    '+'   shift, and go to state 8


State 4

    2 expr: term •
    3 term: term • '*' primary

    '*'  shift, and go to state 9

    $default  reduce using rule 2 (expr)


State 5

    4 term: primary •

    $default  reduce using rule 4 (term)


State 6

    1 expr: expr • '+' term
    6 primary: '(' expr • ')'

    '+'  shift, and go to state 8
    ')'  shift, and go to state 10


State 7

    0 $accept: expr $end •

    $default  accept


State 8

    1 expr: expr '+' • term

    ID   shift, and go to state 1
    '('  shift, and go to state 2

    term     go to state 11
    primary  go to state 5


State 9

    3 term: term '*' • primary

    ID   shift, and go to state 1
    '('  shift, and go to state 2

    primary  go to state 12


State 10

    6 primary: '(' expr ')' •

    $default  reduce using rule 6 (primary)


State 11

    1 expr: expr '+' term •
    3 term: term • '*' primary

    '*'  shift, and go to state 9

    $default  reduce using rule 1 (expr)


State 12

    3 term: term '*' primary •

    $default  reduce using rule 3 (term)
